fix video overflow

--- a/styles/src/defaults.less
+++ b/styles/src/defaults.less
@@ -125,6 +125,17 @@ button {
   height: 1px;
 }
 
+.video-block .sqs-block-content {
+  .intrinsic { overflow: hidden; }
+
+  iframe {
+    width: 100.5%;
+    height: 100.5%;
+    margin-left: -0.25%;
+    margin-top: -0.25%;
+  }
+}
+
 .eyebrow {
   font-size: 11px;
   letter-spacing: 0.18em;
